# databruce

./: .gitignore  CHANGELOG.md  CREDITS.md  README.md  TODO.md  eye.json  license.txt  list.txt  main.py  ott_key.csv  push_db.ps1  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: main.yml
databruce/: Untitled-1.json  archive.py  archive_org.py  books.csv  covers.py  event_list.txt  event_page.py  events.py  geocode.py  guests.py  insert_data.py  locations.py  lyrics.py  musicbrainz_venue_search.py  pull_release_track_table.py  songs.py  sp_lyrics_artwork.py  test.html  test.py  tours.py  tracks2.json  venues.py  word_list.txt  words.json
databruce/brucebase/: eye.json  eyewitness.py  pull_release_track_table.py
databruce/database/: database_utils.py  db.py  digital_ocean_dump.sql
databruce/database/_schema/: pg_foreignkeys.sql  pg_schema.sql  psql load command.txt  sqlite_schema.sql
databruce/locations/: cities.py  continents.py  countries.py  states.py  states_provinces.json  update_locations.py
databruce/relations/: bands.py  relations.py
databruce/setlist/: opener_closer.py  premiere_debut.py  setlist_stats.py  setlistmultiple.py  song_gap_calc.py
databruce/tabview/: __init__.py  on_stage.py  setlist.py
databruce/tags/: tags.json  tags.py
databruce/tools/parsing/: __init__.py  html_parser.py
databruce/tools/scraping/: categories.json  scraper.py
